# bug_cppvsdbg_clang_vs_gcc

./: CMakeLists.txt  CMakeSettings.json  README.md  _VSC_clang.bat  aaa.natvis  main.cpp  toolset.cmake
